--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,23 +5,24 @@ body {
   box-sizing: border-box;
 }
 
+.json-formatter-row {
+  font-family: inherit;
+  font-size: 16px;
+}
+
 /* Custom CodeMirror Styles */
 .cm-editor {
-  background-color: #444654; /* Background color */
-  color: white; /* Text color */
-  font-size: 14px; /* Font size */
+  background-color: #444654;
+  color: white;
+  font-size: 16px;
 }
 
 .ͼ1 .cm-gutters {
-  background-color: #444654; /* Background color */
+  background-color: #444654;
 }
 
 .cm-gutter > .cm-gutterElement {
-  background-color: #444654; /* Background color */
-  color: white; /* Text color */
-  font-size: 14px; /* Font size */
+  background-color: #444654;
+  color: white;
+  font-size: 14px;
 }
-
-/* .ͼ1 {
-
-} */
